# quant

./: .gitignore  .pre-commit-check.sh  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  HYPOTHESES.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  TODO.md  auto_run.py  backtest.py  daily_sync.py  intraday_runner.py  pipeline.py  pyproject.toml  requirements-dev.txt  requirements.txt  restart.sh  run.py  scheduler.py
.claude/: settings.json
alpha/: README.md  __init__.py  model.py  multi_tf.py  rotation.py  synth.py
archive/: db.py  monitor.py  repository.py  risk_checker.py
backtest/: __init__.py  broker.py  bt_engine.py  diagnostics.py  event_engine.py  loop.py  metrics.py
benchmark/: __init__.py  tracker.py
config/: README.md  config.yaml  constants.py  constants.py.backup-20260707-2123  env.example  loader.py
constraints/: constraints.txt
core/: README.md  trace.py  version.py
data/: README.md  analyst.py  auto_status.json  backtest_trades.db  benchmark.db  benchmark.py  cache.py  daily_basic.py  dividend.py  factor_cache.json  fund_flow.py  fund_hold.py  fundamental.py  holder_trade.py  jq_financials.py  jq_valuation.py  lhb.py  limit_up.py  macro.py  margin.py  news.py  northbound.py  pledge.py  repository.py  schema.sql  store.py  trade_calendar.json  trade_repo.py  trades.db-shm  trades.db-wal
docs/: ANALYSIS-2026-07-03.md  ARCH-IMPROVEMENT-2026-07-13.md  DATA-SOURCE-AUDIT-2026-07-05.md  DATA-SOURCE-CATALOG.md  DATA-SOURCE-CHARACTERISTICS.md  DATA_DICTIONARY.md  FACTOR-ANALYSIS-2026-07-03.json  FACTOR-AUDIT-2026-07-03.md  HANDOFF-2026-07-02.md  HANDOFF-2026-07-03.md  HANDOFF.md  PARAMETER-AUDIT-2026-07-05.md  abn-turnover-factor-deep-dive.md  adr_001_python_sqlite_architecture.md  aggressive_strategy_changelog_2026-05-31.md  ai_identity.md  all_platforms_comprehensive_comparison.md  analysis-2026-07-02.md  architecture_fixes_2026-05-30.md  architecture_review_2026-05-29.md  architecture_v2_design.md  architecture_v4_design.md  architecture_v5_design.md  audit-comprehensive-2026-07-09.md  audit_magic_numbers_20260706.md  audit_report_2026-05-31.md  audit_report_2026-06-01.md  audit_report_2026-06-01_v2.md  backtest_execution_audit_2026-06-05.md  bug_review_2026-06-03.md  bugfix_2026-05-30.md  bugfix_round2_2026-05-30.md  business_flow_specification.md  changelog_2026-05-31.md  cleanup_round3_2026-05-30.md  code_fixes_2026-05-30.md  code_review_2026-05-29.md  code_review_2026-05-31.md  code_review_2026-06-01.md  code_review_2026-06-01_v2.md  (+30 more)
engine/: backtest_runner.py  builder.py  loader.py  predictor.py  ranker.py  rebalance.py  screener.py  sim_broker.py  tracker.py  trainer.py
evaluation/: cpcv.py  deflated_sharpe.py  parallel.py  pbo.py  phase1_data.py  phase2_single.py  phase3_oos.py  phase4_costs.py  phase5_monitor.py  phase6_backtest.py  phase7_wf.py  run_store.py
execution/: __init__.py  broker.py  calendar.py  cost.py  engine.py  impact.py  live_broker.py  monitor.py  order_manager.py  paper.py  quote.py  risk_checker.py  scheduler.py  sell_chain.py  stop_loss.py
factor/: __init__.py  alpha_factory.py  base.py  cache.py  compute.py  compute.py.backup-20260707-2115  compute.py.bak2  demon.py  dragon_tiger.py  evaluate.py  fast_compute.py  fundamental.py  game_theory.py  ic.py  intersection.py  limit_up_pattern.py  marginal.py  market_mood.py  orchestrator.py  real_fundamental.py  registry.py  screening.py  stats_cache.py  synth.py  technical.py  windows.py
monitor/: __init__.py  alerts.py  attribution.py  factor_attribution.py  metrics.py  notify.py  report.py
notebooks/: 01_factor_analysis.ipynb
ops/: daily_push.sh  hikyuu_poc.py  liquidity.py  performance.py  position_sizers.py  review.py  sector_scan.py  signal_algo.py
optimizer/: README.md  __init__.py  hyperopt.py  kelly.py  portfolio.py  rebalance.py
quant/: README.md  daily_sync.py  (+2 more)
(+461 files in other folders)
