 [build-system]
 requires = ["setuptools>=75.0"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "quant"
 description = "A-share quantitative stock selection system — Grinold & Kahn 7-layer architecture"
 readme = "README.md"
 requires-python = ">=3.12"
 dynamic = ["version", "dependencies", "optional-dependencies"]

 [project.urls]
 homepage = "https://github.com/mariusto/quant"

 [[project.authors]]
 name = "Mario"

 [project.scripts]
 quant-serve = "web.app:main"
 quant-pipeline = "pipeline:main"
 quant-eval = "evaluation.run_store:main"

 [tool.setuptools]
 packages = [
   "alpha", "backtest", "benchmark", "config", "core",
   "data", "data.repos",
   "evaluation", "execution",
   "factor", "factor.compute", "factor.compute.price",
   "monitor", "optimizer", "quant", "quant.scheduler",
   "regime", "risk", "scripts", "utils", "web",
 ]

 [tool.setuptools.dynamic]
 version = {attr = "core.version.__version__"}
 dependencies = {file = ["requirements.txt"]}

 [tool.setuptools.dynamic.optional-dependencies]
 dev = {file = ["requirements-dev.txt"]}

 # ═══════════════════════════════════════════════════════════
 # Linting — Ruff (mirrors RD-Agent settings)
 # ═══════════════════════════════════════════════════════════
 [tool.ruff]
 fix = true
 line-length = 120
 src = ["."]

 [tool.ruff.lint]
 select = [
   "E", "F", "W",           # pycodestyle / pyflakes
   "I",                      # isort
   "N",                      # pep8-naming
   "UP",                     # pyupgrade
   "B",                      # flake8-bugbear
   "SIM",                    # flake8-simplify
   "C4",                     # flake8-comprehensions
   "RET",                    # flake8-return
   "ARG",                    # flake8-unused-arguments
   "RUF",                    # ruff-specific
 ]
 ignore = [
   "D",                     # pydocstyle
   "TD",                    # TODO comments
   "FIX",                   # FIXME comments
   "PLR0913",               # too-many-arguments
   "S101",                  # assert
 ]

 [tool.ruff.lint.per-file-ignores]
 "factor/compute/*.py" = ["N806", "ARG001"]
 "tests/*" = ["S101", "ARG001", "PLR2004"]
 "scripts/*" = ["INP001"]

 # ═══════════════════════════════════════════════════════════
 # Type checking — mypy
 # ═══════════════════════════════════════════════════════════
 [tool.mypy]
 python_version = "3.12"
 check_untyped_defs = true
 disallow_untyped_defs = false
 warn_return_any = true
 warn_unused_ignores = true
 exclude = ["\.venv/", "build/", "__pycache__/"]

 [[tool.mypy.overrides]]
 module = [
   "numpy", "pandas", "scipy", "sklearn",
   "lightgbm", "xgboost", "plotly", "matplotlib", "seaborn",
   "flask", "yaml", "tqdm", "optuna", "hmmlearn",
   "tickflow", "akshare", "tushare",
 ]
 ignore_missing_imports = true

 # ═══════════════════════════════════════════════════════════
 # Testing — pytest
 # ═══════════════════════════════════════════════════════════
 [tool.pytest.ini_options]
 minversion = "8.0"
 addopts = "-v --tb=short --strict-markers"
 testpaths = ["tests"]
 markers = [
   "slow: slow running tests",
   "integration: integration tests requiring market.db",
   "unit: fast unit tests",
 ]

 # ═══════════════════════════════════════════════════════════
 # Coverage
 # ═══════════════════════════════════════════════════════════
 [tool.coverage.run]
 source = ["alpha", "backtest", "benchmark", "config", "core",
           "data", "evaluation", "execution", "factor", "monitor",
           "optimizer", "quant", "regime", "risk", "utils", "web"]
 omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

 [tool.coverage.report]
 fail_under = 65
 exclude_also = [
   "def __repr__",
   "raise AssertionError",
   "raise NotImplementedError",
   "if __name__ == .__main__.:",
   "if TYPE_CHECKING:",
 ]
